--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 Jinja2==2.7.3
 hiredis==0.1.3
+psycopg2==2.5.4
 redis==2.9.1
+git+ssh://git@bitbucket.org/svven/database.git@master#egg=svven-database
