--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ Jinja2==2.7.3
 hiredis==0.1.3
 psycopg2==2.5.4
 redis==2.9.1
--e ../database # git+ssh://git@bitbucket.org/svven/database.git@master#egg=svven-database
+git+ssh://git@bitbucket.org/svven/database.git@master#egg=svven-database # -e ../database
